<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biblio_bg">

    <!-- ================= HEADER ================= -->

    <LinearLayout
        android:id="@+id/headerUsuario"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/biblio_detalhes"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="-100dp"
                android:layout_marginTop="-100dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="@color/white"
                android:alpha="0.3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/btnNotificacao"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_popup_reminder"
                    android:contentDescription="@string/label_notificacao"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/btnConfig"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_menu_manage"
                    android:contentDescription="@string/label_configuracao"/>

            </LinearLayout>

        </FrameLayout>



        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagePerfilUsuario"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@drawable/user_placeholder"
            android:layout_marginTop="-40dp"
            android:contentDescription="@string/label_perfil"/>



        <TextView
            android:id="@+id/textNomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_usuario"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>



        <TextView
            android:id="@+id/textBemVindoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_bem_vindo"
            android:textColor="@color/white"/>

    </LinearLayout>




    <!-- ================= CONTEÚDO ================= -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerUsuario"
        app:layout_constraintBottom_toTopOf="@id/barraUsuario">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:paddingBottom="100dp"
            android:orientation="vertical">



            <!-- CARD BEM VINDO -->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"/>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPesquisarLivros"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="14dp"
                android:text="Pesquisar livros"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-black"
                app:backgroundTint="@color/biblio_dark"
                app:cornerRadius="28dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMinhaLivraria"
                android:text="@string/btn_minha_livraria"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:backgroundTint="@color/biblio_dark"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnListaDesejos"
                android:text="@string/btn_lista_desejos"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/biblio_dark"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAmigos"
                android:text="@string/titulo_amigos"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/biblio_dark"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHistorico"
                android:text="@string/btn_historico"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/biblio_dark"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStatusAluguel"
                android:text="@string/btn_status_aluguel"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="10dp"
                app:backgroundTint="@color/biblio_dark"/>

            <!-- BOTÃO SAIR -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSairConta"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/btn_sair_conta"
                app:backgroundTint="@color/biblio_red" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_descobrir"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <!-- ================= DESCOBRIR ================= -->


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/containerDescobrir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- Cards adicionados dinamicamente por TelaRF08DashboardUsuario -->

                    </LinearLayout>

                </HorizontalScrollView>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <!-- BARRA DE TAREFAS FIXA -->
    <include
        android:id="@+id/barraUsuario"
        layout="@layout/barra_tarefas_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>